<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AntiqueWhite" >

    <LinearLayout
        android:id="@+id/RooLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
   <LinearLayout
        android:id="@+id/innerLL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >   
        

        
	<EditText 
	    android:id="@+id/contactnameTBox"
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center_horizontal"
	    android:hint="@string/cntnm"/>
	
	
	<EditText 
	    android:id="@+id/contactnumTBox"
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:layout_marginTop="10dp"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center_horizontal"
	    android:hint="@string/cntno"/>
	
     <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
            android:alpha=".50"
            android:background="@color/White" />
	
	   <LinearLayout
        android:id="@+id/innerLL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 
        
	        <Button
                android:id="@+id/addcon_EC_btn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                style="?android:attr/buttonBarStyle"
                android:background="@drawable/addcontact" />
	        
	        
	           <Button
                android:id="@+id/submt_EC_btn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                style="?android:attr/buttonBarStyle"
                android:background="@drawable/submit" />
	        
	    </LinearLayout> 
	    
	  <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
            android:alpha=".50"
            android:background="@color/White" />
	  
	  <TextView 
	      android:id="@+id/emrg"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_marginTop="5dp"
	      android:textSize="20sp"
	      android:layout_gravity="center_horizontal"
	      android:text="@string/title_activity_emergency_contacts"/>
	  
	  <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
            android:alpha=".50"
            android:background="@color/White" />
	
	
    </LinearLayout> 
    
       
        
    <ListView 
        android:id="@+id/llvv"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"></ListView>
        
        
    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:soundEffectsEnabled="true" />

</android.support.v4.widget.DrawerLayout>