<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AntiqueWhite" >

    <LinearLayout
        android:id="@+id/SpndRootScrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lattextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/lat"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lontextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/lon"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha=".50"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/spdtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/spd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
            android:alpha=".50"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/addrtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha=".50"
            android:background="#FFFFFF" />

        <LinearLayout
            android:id="@+id/btnlyt"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content" >
            
        <Button
                android:id="@+id/meet_fa_btn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                style="?android:attr/buttonBarStyle"
                android:background="@drawable/meet" />

            <Button
                android:id="@+id/emrg_fa_btn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                style="?android:attr/buttonBarStyle"
                android:background="@drawable/emergency" />

            <Button
                android:id="@+id/follow_fa_btn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                style="?android:attr/buttonBarStyle"
                android:background="@drawable/follow" />
        </LinearLayout>
        
        
    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:soundEffectsEnabled="true" />

</android.support.v4.widget.DrawerLayout>